HTML CSS fixed some content, edited some styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>CrystalsCollector!</title>
+    <title>RupeeCollector!</title>
 
     <!--CSS links-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -27,7 +27,7 @@
             <div class="col-md-4 titleBox">
 
                 <h1>
-                    CrystalsCollector!
+                    RupeeCollector!
                 </h1>
 
             </div>
@@ -40,7 +40,7 @@
                     You will be given a random number at the start of the game.
                 </p>
                 <p>
-                    there are four crystals below. By clicking on a crystal you will add a speciic amount of points to
+                    There are four rupees below. By clicking on a rupee you will add a speciic amount of points to
                     your
                     total score.
                 </p>
@@ -50,7 +50,7 @@
                     goes above the random number.
                 </p>
                 <p>
-                    The value of each crystal is hidden from you until you click on it.
+                    The value of each rupee is hidden from you until you click on it.
                 </p>
                 <p>
                     Each time the game starts, the game will change the values of each crystal.
