--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <title>RupeeCollector!</title>
 
+    <!--font link-->
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <!--CSS links-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -59,13 +62,14 @@
         </div>
         <div class="row">
             <!--random number box-->
-            <div id="randomNumber" class="col-md-3 rdnBox">
-            </div>
+            <div id="randomNumber" class="col-md-3 rdnBox"></div>
 
             <!--win/loss box-->
             <div class="col-md-1 wlBox">
-                <div id="wins" class="row"></div>
-                <div id="loss" class="row"></div>
+                <div class="wlStyle">
+                    <div id="wins" class="row">wins: 0</div>
+                    <div id="loss" class="row">loss: 0</div>
+                </div>
             </div>
         </div>
 
