--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
 
             <div class="col-md-5 rupeeBox">
                 <div class="row">
-                    <div id="green" class="col-md-3 buttonStyle"><img src="assets/images/GreenRupee.png" alt="zelda green rupee" 
+                    <div id="green" class="col-md-3 rupeeStyle"><img src="assets/images/GreenRupee.png" alt="zelda green rupee" 
                             class="gemStyle">
                     </div>
-                    <div id="blue" class="col-md-3 buttonStyle"><img src="assets/images/BlueRupee.png" alt="zelda blue rupee"
+                    <div id="blue" class="col-md-3 rupeeStyle"><img src="assets/images/BlueRupee.png" alt="zelda blue rupee"
                             class="gemStyle">
                     </div>
-                    <div id="yellow" class="col-md-3 buttonStyle"><img src="assets/images/YellowRupee.png" alt="zelda yellow rupee"
+                    <div id="yellow" class="col-md-3 rupeeStyle"><img src="assets/images/YellowRupee.png" alt="zelda yellow rupee"
                             class="gemStyle">
                     </div>
-                    <div id="red" class="col-md-3 buttonStyle"><img src="assets/images/RedRupee.png" alt="zelda red rupee"
+                    <div id="red" class="col-md-3 rupeeStyle"><img src="assets/images/RedRupee.png" alt="zelda red rupee"
                             class="gemStyle">
                     </div>
                 </div>
