ALL some minor tweeks to make it look nicer. README written

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     The value of each rupee is hidden from you until you click on it.
                 </p>
                 <p>
-                    Each time the game starts, the game will change the values of each crystal.
+                    Each time the game starts, the game will change the values of each rupee.
                 </p>
             </div>
         </div>
@@ -110,6 +110,8 @@
         </div>
 
     </div>
+    
+    <footer></footer>
 
 
 </body>
